<resources>
    <string name="app_name">TaskApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">タイトル</string>
    <string name="content">内容</string>
    <string name="category">カテゴリー</string>
    <string name="date">----/--/--</string>
    <string name="time">--:--</string>
    <string name="register">決定</string>
    <string name="mainCategory">フィルター</string>
    <string name="todo_list">TODO List</string>
</resources>
