<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InputActivity"
    tools:showIn="@layout/activity_input">

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/content_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_edit_text"
        android:hint="@string/content"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content_edit_text"
        android:hint="@string/category"
        android:autofillHints=""
        android:inputType="text" />

    <Button
        android:id="@+id/date_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_edit_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="27dp"
        android:layout_toStartOf="@+id/times_button"
        android:text="@string/date" />

    <Button
        android:id="@id/times_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_edit_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="18dp"
        android:text="@string/time" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/times_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="18dp"
        android:text="@string/register" />

</RelativeLayout>
